<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>otus</groupId>
    <artifactId>StudyProject</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <assertj.core>3.22.0</assertj.core>
        <junit.version>5.8.1</junit.version>
        <maven.checkstyle>3.1.0</maven.checkstyle> <!-- добавить -->
        <junitBom.version>5.8.1</junitBom.version>
        <faker.version>1.0.2</faker.version>
        <findbugs.maven>3.0.5</findbugs.maven> <!-- добавить -->
        <rest.assured>4.4.0</rest.assured>
        <lombok>1.18.22</lombok>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <forkCount>1</forkCount>
        <reuseForks>true</reuseForks>
        <parallel>all</parallel>
        <perCoreThreadCount>false</perCoreThreadCount>
        <useUnlimitedThreads>true</useUnlimitedThreads>
        <thread.count>32</thread.count>
        <test.project.language>RU</test.project.language>
        <jackson.mapper.asl>1.9.13</jackson.mapper.asl>
        <surefire.plugin.version>2.22.2</surefire.plugin.version>
        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
        <json.schema.validator>4.3.1</json.schema.validator> <!-- эта версия не тормозит -->
        <rest.base.url>https://petstore.swagger.io/v2</rest.base.url>
        <rest.pet.url>pet</rest.pet.url>
        <rest.store.url>store/order</rest.store.url>
        <rest.user.store.url>user</rest.user.store.url>
        <rest.response.code.custom>302</rest.response.code.custom>
        <rest.time.less.than.long>6500000</rest.time.less.than.long>
        <spring>5.2.20.RELEASE</spring>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>json-schema-validator</artifactId>
            <version>${json.schema.validator}</version>
        </dependency>
        <dependency>
            <groupId>org.junit</groupId>
            <artifactId>junit-bom</artifactId>
            <version>${junitBom.version}</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>${faker.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${rest.assured}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>${jackson.mapper.asl}</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>production</id>
            <properties>
                <rest.base.url>https://petstore.swagger.io/v2</rest.base.url>
                <rest.pet.url>pet</rest.pet.url>
                <rest.store.url>store/order</rest.store.url>
                <rest.user.store.url>user</rest.user.store.url>
            </properties>
        </profile>
        <profile>
            <id>develop</id>
            <properties>
                <rest.base.url>https://petstore.swagger.io/v2/dev</rest.base.url>
                <rest.pet.url>pet/dev</rest.pet.url>
                <rest.store.url>store/order/dev</rest.store.url>
                <rest.user.store.url>user/dev</rest.user.store.url>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.plugin.version}</version>
                <configuration>
                    <forkCount>${forkCount}</forkCount>
                    <reuseForks>${reuseForks}</reuseForks>
                    <parallel>${parallel}</parallel>
                    <perCoreThreadCount>${perCoreThreadCount}</perCoreThreadCount>
                    <useUnlimitedThreads>${useUnlimitedThreads}</useUnlimitedThreads>
                    <threadCountMethods>${thread.count}</threadCountMethods>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <systemPropertyVariables>
                        <rest.base.url>${rest.base.url}</rest.base.url>
                        <rest.pet.url>${rest.pet.url}</rest.pet.url>
                        <rest.store.url>${rest.store.url}</rest.store.url>
                        <rest.user.store.url>${rest.user.store.url}</rest.user.store.url>
                        <rest.user.store.url>${rest.response.code.custom}</rest.user.store.url>
                        <rest.time.less.than.long>${rest.time.less.than.long}</rest.time.less.than.long>
                        <test.project.status>test</test.project.status>
                        <test.project.language>${test.project.language}</test.project.language>


                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven.checkstyle}</version>
                <configuration>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <configLocation>${project.build.sourceDirectory}/../resources/checkstyle.xml</configLocation>
                </configuration>
                <executions>
                    <execution>
                        <id>analyze-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>${findbugs.maven}</version>
                <configuration>
                    <effort>Max</effort>
                    <threshold>Low</threshold>
                    <xmlOutput>true</xmlOutput>
                    <includeTests>true</includeTests>
                    <omitVisitors>UnreadFields</omitVisitors>
                </configuration>
                <executions>
                    <execution>
                        <id>analyze-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

    </build>

</project>